--- a/HTML/002.html
+++ b/HTML/002.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>div</title>
 </head>
+
 <body>
-    <!-- emmet 문법 -->
-    div{hello}*10
-    <h2>hello</h2>
+    <div>hello</div>
     <div>hello</div>
     <div>hello</div>
     <div>hello</div>
@@ -20,4 +20,5 @@
     <div>hello</div>
     <div>hello</div>
 </body>
+
 </html>
