--- a/HTML/003.html
+++ b/HTML/003.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스니펫 확인</title>
 </head>
+
 <body>
     스니펫 수정 후, htmlko 작동 되는지 확인,
     <h1>live Server Test</h1>
     <p>auto rename tag 실습</p>
-    <p>Lorem <strong>ipsum</strong>, dolor sit amet consectetur adipisicing elit. Animi molestiae modi atque incidunt at! Quod voluptas eos expedita alias quibusdam illo laborum corrupti minima temporibus illum, recusandae nobis, natus eveniet.</p>
+    <p>Lorem <strong>ipsum</strong>, dolor sit amet consectetur adipisicing elit. Animi molestiae modi atque incidunt
+        at! Quod voluptas eos expedita alias quibusdam illo laborum corrupti minima temporibus illum, recusandae nobis,
+        natus eveniet.</p>
 </body>
+
 </html>
