--- a/JavaScript/010_number.html
+++ b/JavaScript/010_number.html
@@ -99,7 +99,11 @@
         //     (KB, MB, GB, TB, PB)갈매기털빼
 
 
-
+        // 질의응답
+        let one = 10;
+        console.log(one.toString());
+        // console.log(10.toString());
+        // 10. 이후를 소수점으로 판단
     </script>
 </body>
 
