--- a/JavaScript/012_질의응답.html
+++ b/JavaScript/012_질의응답.html
@@ -48,14 +48,13 @@
                 _id: "63368becde89e8dcadcd25c3",
                 index: 4,
                 guid: "6d7c2d90-a5dc-41d4-8910-da153c99db5c",
-                age: 36,
+                age: 37,
                 name: "Juliana Burch",
                 gender: "female",
             },
         ];
-
-        // console.log(Math.max(...[19, 46, 25, 37]))
-        console.log(Math.min(...userData.map(val => val.age)))
+        // console.log(Math.min(...[24, 36, 24, 37]));
+        console.log(Math.min(...userData.map((value) => value.age)));
     </script>
 </body>
 
